--- a/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "ProductCommision";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="row" style="margin-top: 5px">
-    <div class="col-md-12">
+<div class="row p-0" style="margin-top: 5px">
+    <div class="col-md-12 p-0">
 
 
         <div class="card  shadow card  card-outline card-tabs" style="margin-top:-30px">
@@ -21,11 +21,11 @@
         </div>
 
 
-        <div class="card-body shadow">
+        <div class="card-body shadow p-0">
             <div class="tab-content" id="custom-tabs-two-tabContent">
                 <div class="tab-pane fade show active " id="custom-tabs-two-commissiononproductList" role="tabpanel" aria-labelledby="custom-tabs-two-commissiononproductList-tab">
 
-                    <div class="row" style="margin-top:-35px">
+                    <div class="row" style="margin-top:-16px">
                         <div class="col-md-12">
                             <div class="card "style="background-color:#001f3f">
                                 <div class="px-2 py-1">
@@ -58,22 +58,22 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12" style="margin-top:-13px">
-                            <div class="card ">
-                                <div class="card-body"style="margin-top:-10px">
-                                    <div class="row">
-                                        <div class="col-md-12 text-sm text-sm" id="dataContainer" style="overflow-y:scroll">
+                        <div class="col-md-12 p-0" style="margin-top:-16px">
+                          
+                              
+                                  
+                                        <div class="col-md-12 p-0 text-sm" id="dataContainer">
 
                                         </div>
-                                    </div>
-                                </div>
-                            </div>
+                                    
+                               
+                            
                         </div>
                     </div>
                 </div>
                 <div class="tab-pane fade show " id="custom-tabs-two-commissiononproduct" role="tabpanel" aria-labelledby="custom-tabs-two-commissiononproduct-tab">
 
-                    <div class="row" style="margin-top:-35px">
+                    <div class="row" style="margin-top:-16px">
                         <div class="col-md-12">
                             <div class="card card-navy">
                                 <div class="card-header" style="text-align: center;">
