--- a/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
@@ -6,8 +6,8 @@
     string tab = ViewBag.tab;
 }
 
-<div class="row" style="margin-top:5px">
-    <div class="col-md-12">
+<div class="row text-sm p-0" style="margin-top:5px">
+    <div class="col-md-12 p-0">
         <input id="tab" type="text" hidden value="@tab" />
 
         <div class="card  shadow card  card-outline card-tabs" style="margin-top:-30px">
@@ -34,20 +34,20 @@
             </ul>
         </div>
 
-        <div class="card-body shadow">
+        <div class="card-body shadow p-0">
             <div class="tab-content" id="custom-tabs-two-tabContent">
                 @*Stockiest List *@
                 <div class="tab-pane fade show active" id="custom-tabs-two-StockiestList" role="tabpanel" aria-labelledby="custom-tabs-two-StockiestList-tab">
 
 
-                    <div class="row" style="margin-top:-35px">
+                    <div class="row" style="margin-top:-16px">
                         <div class="col-md-12"style="height:60px;text-align:center">
                             <div class="card" style="background-color:#001f3f">
                                 <div class="px-2 py-1">
-                                    <div class="row" style="vertical-align:middle">
+                                    <div class="row align-items-center">
 
                                         <div class="col-md-2">
-                                            <h5 class="float-left text-bold text-white">Stockiest List</h5>
+                                            <h6 class="float-left text-bold text-white">Stockiest List</h6>
                                         </div>
                                         <div class="col-md-2">
 
@@ -61,7 +61,7 @@
 
                                         </div>
                                         <div class="col-md-3">
-                                            <a href="/AgroConfiguration/CreateStockiestList" class="btn btn-outline-warning btn-sm float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New Stockiest</a>
+                                            <a href="/AgroConfiguration/CreateStockiestList" class="das2-btn float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New Stockiest</a>
                                         </div>
                                     </div>
                                 </div>
@@ -71,23 +71,17 @@
 
                     </div>
 
-                    @*<div class="row" style="margin-top:-15px">
-                        <div class="col-md-12">
-                            <div class="card card-gray-dark">
+                    
+                    <div class="row" style="margin-top:-25px">
+                        @*<div class="col-md-12 p-0" style="margin-top:-1px">*@
+                            
                                 
-                            </div>
-                        </div>
-                    </div>*@
-                    <div class="row" style="margin-top:-15px">
-                        <div class="col-md-12" style="margin-top:-1px">
-                            <div class="card ">
-                                <div class="card-body"style="margin-top:-10px">
-                                    <div class="col-md-12" id="sdataContainer">
+                                    <div class="col-md-12 p-0" id="sdataContainer">
 
                                     </div>
-                                </div>
-                            </div>
-                        </div>
+                        
+                          
+                        @*</div>*@
                     </div>
 
 
@@ -96,14 +90,13 @@
                 @*Territory List *@
                 <div class="tab-pane fade show" id="custom-tabs-two-Territory" role="tabpanel" aria-labelledby="custom-tabs-two-Territory-tab">
 
-                    <div class="row" style="margin-top:-35px">
+                    <div class="row" style="margin-top:-16px">
                         <div class="col-md-12"style="height:60px;text-align:center">
                             <div class="card" style="background-color:#001f3f">
                                 <div class="px-2 py-1">
-                                    <div class="row">
-
-                                        <div class="col-md-2 ">
-                                            <h5 class="text-center text-bold float-left text-white">Territory List</h5>
+                                    <div class="row align-items-center">
+                                        <div class="col-md-2 text-center">
+                                            <h6 class="text-center text-bold float-left text-white">Territory List</h6>
                                         </div>
                                         <div class="col-md-2 ">
 
@@ -115,7 +108,7 @@
 
                                         </div>
                                         <div class="col-md-3">
-                                            <a href="/AgroConfiguration/CreateTerritorylist" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Territory</a>
+                                            <a href="/AgroConfiguration/CreateTerritorylist" class="das2-btn float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Territory</a>
                                         </div>
                                     </div>
                                 </div>
@@ -131,17 +124,17 @@
                         </div>
                     </div>*@
 
-                    <div class="row"  style="margin-top:-15px">
-                        <div class="col-md-12" style="margin-top:-1px">
-                            <div class="card">
-                                <div class="card-body" style="margin-top:-10px">
-                                    <div class="col-md-12" id="tdataContainer">
+                    <div class="row"  style="margin-top:-25px">
+                        @*<div class="col-md-12" style="margin-top:-1px">*@
+                            
+                              
+                                    <div class="col-md-12 p-0" id="tdataContainer">
 
                                     </div>
-                                </div>
+                           
 
-                            </div>
-                        </div>
+                            
+                        @*</div>*@
                     </div>
 
                 </div>
@@ -150,13 +143,13 @@
                 <div class="tab-pane fade show" id="custom-tabs-two-Area" role="tabpanel" aria-labelledby="custom-tabs-two-Area-tab">
 
                     <div class="row">
-                        <div class="col-md-12"style="margin-top:-35px">
+                        <div class="col-md-12"style="margin-top:-16px">
                             <div class="card" style="background-color:#001f3f">
                                 <div class="px-2 py-1">
-                                    <div class="row">
+                                    <div class="row align-items-center">
 
-                                        <div class="col-md-2 ">
-                                            <h5 class="text-center text-bold float-left text-white">Area List</h5>
+                                        <div class="col-md-2 text-center">
+                                            <h6 class="text-center text-bold float-left text-white">Area List</h6>
                                         </div>
                                         <div class="col-md-2">
 
@@ -168,7 +161,7 @@
 
                                         </div>
                                         <div class="col-md-3">
-                                            <a href="/AgroConfiguration/GetArealist" class="btn btn-outline-warning btn-sm float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New Area</a>
+                                            <a href="/AgroConfiguration/GetArealist" class="das2-btn float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New Area</a>
                                         </div>
                                     </div>
                                 </div>
@@ -186,14 +179,14 @@
 
                     <div class="row">
 
-                        <div class="col-md-12" style="margin-top:-13px">
-                            <div class="card">
-                                <div class="card-body" style="margin-top:-10px">
-                                    <div class="col-md-12" id="adataContainer">
+                        <div class="col-md-12" style="margin-top:-16px">
+                            
+                               
+                                    <div class="col-md-12 p-0" id="adataContainer">
 
                                     </div>
-                                </div>
-                            </div>
+                            
+                            
                         </div>
 
                     </div>
@@ -203,14 +196,14 @@
                 @*Region List *@
                 <div class="tab-pane fade show" id="custom-tabs-two-Region" role="tabpanel" aria-labelledby="custom-tabs-two-Region-tab">
 
-                    <div class="row" style="margin-top:-35px">
+                    <div class="row" style="margin-top:-16px">
                         <div class="col-md-12">
                             <div class="card" style="background-color:#001f3f">
                                 <div class="px-2 py-1">
-                                    <div class="row">
+                                    <div class="row align-items-center">
 
-                                        <div class="col-md-2">
-                                            <h5 class="text-center text-bold float-left text-white">Region List</h5>
+                                        <div class="col-md-2 text-center">
+                                            <h6 class="text-center text-bold float-left text-white">Region List</h6>
                                         </div>
                                         <div class="col-md-2">
 
@@ -222,7 +215,7 @@
 
                                         </div>
                                         <div class="col-md-3">
-                                            <a href="/AgroConfiguration/CreateRegionlist" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Region</a>
+                                            <a href="/AgroConfiguration/CreateRegionlist" class="das2-btn float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Region</a>
                                         </div>
                                     </div>
                                 </div>
@@ -238,17 +231,12 @@
                         </div>
                     </div>*@
 
-                    <div class="row" style="margin-top:-13px">
-                        <div class="col-md-12">
-                            <div class="card">
-                                <div class="card-body" style="margin-top:-10px">
-                                    <div class="col-md-12" id="rdataContainer">
+                    <div class="row" style="margin-top:-16px">
+                        
+                                    <div class="col-md-12 p-0" id="rdataContainer">
 
                                     </div>
-                                </div>
-
-                            </div>
-                        </div>
+                                
                     </div>
 
                 </div>
@@ -256,13 +244,13 @@
                 @*Division List *@
                 <div class="tab-pane fade show" id="custom-tabs-two-Division" role="tabpanel" aria-labelledby="custom-tabs-two-Division-tab">
 
-                    <div class="row" style="margin-top:-35px">
+                    <div class="row" style="margin-top:-16px">
                         <div class="col-md-12">
                             <div class="card" style="background-color:#001f3f">
                                 <div class="px-2 py-1">
-                                    <div class="row">
-                                        <div class="col-md-2">
-                                            <h5 class="text-center text-bold float-left text-white">Division List</h5>
+                                    <div class="row align-items-center">
+                                        <div class="col-md-2 text-center">
+                                            <h6 class="text-center text-bold float-left text-white">Division List</h6>
                                         </div>
                                         <div class="col-md-2">
                                         </div>
@@ -272,7 +260,7 @@
                                         <div class="col-md-2">
                                         </div>
                                         <div class="col-md-3">
-                                            <a href="/AgroConfiguration/CreateDivisionInfo" class="btn btn-outline-warning btn-sm float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New Division</a>
+                                            <a href="/AgroConfiguration/CreateDivisionInfo" class="das2-btn float-lg-right" id="createButton"><i class="fa fa-plus"></i> Create New Division</a>
                                         </div>
                                     </div>
                                 </div>
@@ -287,27 +275,27 @@
                     </div>*@
 
                     <div class="row">
-                        <div class="col-md-12" style="margin-top:-13px">
-                            <div class="card">
-                                <div class="card-body"style="margin-top:-10px">
-                                    <div class="col-md-12" id="ddataContainer">
+                        <div class="col-md-12" style="margin-top:-16px">
+                            
+                                
+                                    <div class="col-md-12 p-0" id="ddataContainer">
 
                                     </div>
-                                </div>
-                            </div>
+                           
+                            
                         </div>
                     </div>
                 </div>
 
                 @*Zone List *@
                 <div class="tab-pane fade show " id="custom-tabs-two-Zone" role="tabpanel" aria-labelledby="custom-tabs-two-Zone-tab">
-                    <div class="row" style="margin-top:-35px">
+                    <div class="row" style="margin-top:-16px">
                         <div class="col-md-12">
                             <div class="card" style="background-color:#001f3f">
                                 <div class="px-2 py-1">
-                                    <div class="row">
-                                        <div class="col-md-2">
-                                            <h5 class="text-center text-bold float-left text-white">Zone List</h5>
+                                    <div class="row align-items-center">
+                                        <div class="col-md-2 text-center">
+                                            <h6 class="text-center text-bold float-left text-white">Zone List</h6>
                                         </div>
                                         <div class="col-md-2">
                                         </div>
@@ -317,7 +305,7 @@
                                         <div class="col-md-2">
                                         </div>
                                         <div class="col-md-3">
-                                            <a href="/AgroConfiguration/CreateZonelist" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Zone</a>
+                                            <a href="/AgroConfiguration/CreateZonelist" class="das2-btn float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Zone</a>
                                         </div>
                                     </div>
                                 </div>
@@ -332,15 +320,15 @@
                     </div>*@
 
                     <div class="row">
-                        <div class="col-md-12"style="margin-top:-13px">
-                            <div class="card">
-                                <div class="card-body"style="margin-top:-10px">
-                                    <div class="col-md-12" id="zdataContainer">
+                        <div class="col-md-12"style="margin-top:-16px">
+                           
+                               
+                                    <div class="col-md-12 p-0" id="zdataContainer">
 
                                     </div>
-                                </div>
+                             
 
-                            </div>
+                            
                         </div>
                     </div>
 
