--- a/ERPWeb/Views/AgroConfiguration/_GetDivisionPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetDivisionPartialView.cshtml
@@ -6,7 +6,7 @@
     var privilege = (ERPBO.Common.UserPrivilege)ViewBag.UserPrivilege;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12 p-0">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblDivisionData">
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -35,7 +35,7 @@
 
                     <td class="text-center">
 
-                        <a href="#" class="btn btn-warning btn-sm data-edit-item-DivisionId" style="line-height:1" data-edit-item-DivisionId="@item.DivisionId"><i class="fa fa-pen"></i>Edit</a>
+                        <a href="#" class="dasedit-btn data-edit-item-DivisionId" style="line-height:1" data-edit-item-DivisionId="@item.DivisionId"><i class="fa fa-pen"></i></a>
                     </td>
                 </tr>
                 }
