--- a/ERPWeb/Views/AgroConfiguration/_GetStockiestPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetStockiestPartialView.cshtml
@@ -6,7 +6,7 @@
     var privilege = (ERPBO.Common.UserPrivilege)ViewBag.UserPrivilege;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12 p-0">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblStockiestData">
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -45,7 +45,7 @@
                     <td class="text-center hide">@item.StockiestContactPersonPHNumber</td>
                     <td class="text-center hide">@item.CreditLimit</td>
                     <td class="text-center">
-                        <a href="#" class="btn btn-warning btn-sm data-edit-item-StockiestId" style="line-height:1" data-edit-item-Territory="@item.StockiestId"><i class="fa fa-pen"></i> Edit</a>
+                        <a href="#" class="dasedit-btn data-edit-item-StockiestId" style="line-height:1" data-edit-item-Territory="@item.StockiestId"><i class="fa fa-pen"></i></a>
                     </td>
                 </tr>
                 }
