--- a/ERPWeb/Views/AgroConfiguration/_ProductCommision.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_ProductCommision.cshtml
@@ -47,8 +47,8 @@
                 <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
                 <td class="text-center hide">@item.CommissionOnProductId</td>
                 <td class="text-center" style="color:red">@item.Quantity Days</td>
-                <td>
-                    <a href="#" class="btn btn-outline-warning data-item-edit" title="Edit" data-item-edit="@item.CommissionOnProductId" style="line-height:1">
+                <td class="text-center">
+                    <a href="#" class="dasedit-btn data-item-edit" title="Edit" data-item-edit="@item.CommissionOnProductId" style="line-height:1">
                         <i class="fas fa-pen"></i>
                     </a>
                 </td>
